Agregando GET al CRUD Role
